# dwnsmpl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cppcheck.cmd  downsample2d.sln  downsample2d.vcxproj  downsample2d.vcxproj.filters  downsample_test.vcxproj  downsample_test.vcxproj.filters  kws.xml  kwstyle.cmd  run_lungs_000.cmd  run_lungs_001.cmd  run_lungs_002.cmd  run_lungs_003.cmd  run_lungs_004.cmd  run_lungs_005.cmd  run_lungs_006.cmd  run_lungs_007.cmd
src/cspec/: cspec_output_junit_xml.c  cspec_output_xml.c
src/dwnsmpl/: dsample2d.cpp  dsample2d.h
src/test/: imgload.cpp  imgload.h  main_test.cpp
src/universal/: draw.cpp  draw.h  dump.cpp  dump.h  image.cpp  image.h  ktxtexture.cpp  ktxtexture.h  memtrack.cpp  memtrack.h  mtypes.cpp  mtypes.h  volume.cpp  volume.h
src/win/: dwnsmp2d_main_win.cpp
